# libresolvconf

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: FindRAGEL.cmake
doc/: conf.py  index.md
docs/: CMakeLists.txt  conf.py  index.md
docs/content/: about.md  install.md  man.md
src/example/: CMakeLists.txt  main.c
src/libresolvconf/: CMakeLists.txt  arr_str.c  conf.c  defines.h  dynarray.c  dynarray.h  dynarray_cit.c  error.c  parser.h  parser.rl  resolvconf.c  vec_str.c  vec_str.h  vector.c  vector.h  vector_it.c
src/libresolvconf/include/: error.h  resolvconf.h  vector_it.h
src/libresolvconf/include/libresolvconf/: arr_str.h  conf.h  dynarray_cit.h  error.h  resolvconf.h
src/utils/: CMakeLists.txt
src/utils/resolvconf-checker/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  libresolvconf.c  main.c
